# macaroni

./: Cargo.toml  README.md
assets/attribute/: Cargo.toml
assets/attribute/src/: lib.rs
assets/attribute/tests/: test.rs
assets/declarative/: Cargo.toml
assets/declarative/src/: lib.rs
assets/declarative/tests/: test.rs
assets/derive/: Cargo.toml
assets/derive/src/: lib.rs
assets/derive/tests/: test.rs
assets/function/: Cargo.toml
assets/function/src/: lib.rs
assets/function/tests/: test.rs
src/: main.rs
tests/: test.rs  test_command.rs
