[package]
name = "macaroni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.1"
futures = "0.3.29"
iced = { git = "https://github.com/iced-rs/iced", features = ["advanced", "tokio"] }
iced_highlighter = { git = "https://github.com/iced-rs/iced" }
rfd = "0.12.1"
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["fs", "process", "sync"] }
